refactor(graph): 优化代码实现并增强复习计划生成的容错能力
- 将 List 的 get(0) 替换为 getFirst() 方法提高代码现代性
- 修改 Collectors.toList() 为 toList() 简化集合操作
- 重构 ReviewPlanner 类以支持降级方案和重试机制
- 实现本地基础复习计划生成功能避免模型服务不可用时流程中断
- 添加 fallback 标识用于区分 AI 生成和本地降级结果
- 增加多个测试用例验证降级计划生成功能的正确性

(cherry picked from commit 814b58e41dc30488600a56889d2fb85079fe69ac)